<resources>
    <string name="spicer_us">Auto Action</string>
    <string name="am_customer_terretory">AM Territory \n Customer</string>
    <string name="app_name">I-pay</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="title">iPay</string>
    <string name="footer">We are the first, We are the future.</string>
    <string name="addexternalcontact">Add Dealer Contact</string>
    <string name="editexternalcontact">Edit Dealer Contact</string>
    <string name="externalcontact">Dealer Contact</string>
    <string name="error2">Complete Missing Field </string>
    <string name="error3">please enter blank/invalid entry </string>
    <string name="error4">Network/Sever Busy try again</string>
    <string name="error6">Data upload Failed</string>
    <string name="error7">Your device seems to be offline.Please check your network connection and try again.</string>
    <string name="error8">Please select valid date.Date can three days old from current date.</string>
    <string name="select">Select Option</string>
    <string name="message1">Authenticating.......</string>
    <string name="message4">No Data Exist</string>
    <string name="message5">Data Uploaded Successfully</string>
    <string name="message6">Mobile Number Already Exist</string>
    <string name="message7">This mobile no is not registered.Would you like to continue?</string>
    <string name="contacttype">Contact Type</string>
    <string name="cfa_dealer_mg_spinner">Cfa/Dealer/MG value</string>
    <string name="dealer">Dealer</string>
    <string name="am_stock">AM</string>
    <string name="cfa">CFA</string>
    <string name="contactname">Conatct Name</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="emailid">Email Id</string>
    <string name="alternatemob">Alternate Mobile Number</string>
    <string name="phonenumber">Phone Number</string>
    <string name="dob">Date Of Birth</string>
    <string name="department_error"> Please select department</string>
    <string name="country">Country</string>
    <string name="zone">Zone</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="pincode">Pincode</string>
    <string name="streetaddress">Street Address</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="datefoemate">MM/DD/YYYY</string>
    <string name="viewcontact">View Contact Details</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="welcome">Welcome</string>
    <string name="coupon">Coupon</string>
    <string name="scan">Scan</string>
    <string name="redeemed">Redeemed</string>
    <string name="entercoupon">Add/scan coupon code</string>
    <string name="search">Search</string>
    <string name="searchcontact">Search Contact</string>
    <string name="retailercontacttype">Contact Type</string>
    <string name="Retailer">Retailer</string>
    <string name="addretailercontact">Customer Registration</string>
    <string name="editretailercontact">Edit Retailer Contact</string>
    <string name="retailercontact">Retailer Contact</string>
    <string name="productsegment">Product Segment</string>
    <string name="productoe">Product OE</string>
    <string name="authorized">Authorized</string>
    <string name="producttype">Product Type</string>
    <string name="productsubtype">Product Sub Type</string>
    <string name="productapplication">Product Application</string>
    <string name="bankaccountholder">Bank Account Holder</string>
    <string name="bankname">Bank Name</string>
    <string name="branchname">Branch Name</string>
    <string name="bankifsc">Bank IFSC Code</string>
    <string name="bankaccounttype">Bank Account Type</string>
    <string name="bankaccountnumber">Bank Account Number</string>
    <string name="mechanics">Mechanic</string>
    <string name="mg">MG</string>
    <string name="account">Account</string>
    <string name="couponholdermobile">Mobile Number</string>
    <string name="bankcity">Select Bank City</string>
    <string name="bankdetails">Want To Fill Bank Details</string>
    <string name="notregister">If Not Registered?</string>
    <string name="register">Register</string>
    <string name="phonenonotregister">Phone Number Not Register </string>
    <string name="usernotregister">Invalid UserName/Password</string>
    <string name="accountlocked">Your Account has been Locked. Please contact to Area Manager.</string>
    <string name="loginerroe">Login Error</string>
    <string name="loadingerror">Error occurred while loading the data! Please try again.</string>
    <string name="cashcollected">Cash </string>
    <string name="couponmsg">Coupon </string>
    <string name="couponmsg1">Coupon Does Not Exist</string>
    <string name="couponmsg2">Invalid coupon code</string>
    <string name="couponmsg3">This is not a Dealer Type Coupon</string>
    <string name="couponmsg4">This is not a Mechanic Type Coupon</string>
    <string name="couponmsg5">Coupon has Already been Redeemed</string>
    <string name="couponmsg6">Coupon is not Activated yet..</string>
    <string name="couponmsg7">Coupon Redeemed Successfully</string>
    <string name="viewexternal">View Dealer Contact</string>
    <string name="addcontact">Add Dealer Contact</string>
    <string name="viewretailer">View Retailer/Mechanic</string>
    <string name="addretailer">Add Retailer/Mechanic</string>
    <string name="dealersale">Dealer Sale</string>
    <string name="voucherno">Voucher No</string>
    <string name="partyname">Party Name</string>
    <string name="datehint">DD/MM/YYYY</string>
    <string name="date">Date</string>
    <string name="itemcode">Item Code</string>
    <string name="itemname">Item Name</string>
    <string name="product_code">Product Name</string>
    <string name="check">Check</string>
    <string name="coupon_value">Coupon Value</string>
    <string name="avg_value">Average\n Value</string>
    <string name="sale_value">Sale\n Value</string>
    <string name="quantity">Quantity</string>
    <string name="clasification">Classification</string>
    <string name="additem">Add Item</string>
    <string name="productcode">Product Code</string>
    <string name="productname">Product Name</string>
    <string name="unitprice">Unti Price</string>
    <string name="stockqty">Stock Qty</string>
    <string name="remainqty">Remain Qty</string>
    <string name="amount">Amount</string>
    <string name="cd_yn">CD Y/N</string>
    <string name="cancel">Cancel</string>
    <string name="district">District</string>
    <string name="verificationtype">Verification Doc Type</string>
    <string name="verificationdoc">Document details</string>
    <string name="acctype">Account Type</string>
    <string name="garage">Garage</string>
    <string name="individual">Individual</string>
    <string name="banknamecity">Bank Name City</string>
    <string name="ifsc">IFSC</string>
    <string name="banksearch">Bank Search</string>
    <string name="garagename">Garage Name</string>
    <string name="department">Department</string>
    <string name="designation">Designation</string>
    <string name="areadetails">Area Details</string>
    <string name="visitdetails">Visit Details</string>
    <string name="partytype">Party Type </string>
    <string name="party">Party</string>
    <string name="purposeofvisit">purpose of visit</string>
    <string name="visitnotes">Meeting Notes</string>
    <string name="saletype">Sale Type</string>
    <string name="sale">Sale</string>
    <string name="returntype">Return</string>
    <string name="searchitem">Search item</string>
    <string name="stockquantity">Stock Quantity</string>
    <string name="btsbtoclasification">BTO/BTS Classification</string>
    <string name="rygstatus">RYG Status</string>
    <string name="loadproductdetails">Loading product details....</string>
    <string name="loadsalelist">Loading already sold data....</string>
    <string name="RemoveItem">Remove Item</string>
    <string name="submit">Submit</string>
    <string name="availability">Availability</string>
    <string name="dateerror">This date is not applicable.</string>
    <string name="uploaddata">Updating data please wait....</string>
    <string name="salereturn">Sale/Return</string>
    <string name="finalsubmit">Submit</string>
    <string name="editsale">Edit Sale</string>
    <string name="all">All</string>
    <string name="saleinvoiceno">Sales Invoice No</string>
    <string name="patryname">Party Name</string>
    <string name="saledate">Sale Date</string>
    <string name="noofitem">No Of Items</string>
    <string name="serviceinvoiceno">Sales Invoice No</string>
    <string name="sellingprice">Selling Price</string>
    <string name="remainquantity">Remain Quantity</string>
    <string name="saleamount">Sale Amount</string>
    <string name="deleteitems">Delete Item(s)</string>
    <string name="selectproduct">Select</string>
    <string name="dummytext">abcd</string>
    <string name="placeorder">Place Order</string>
    <string name="dealername">Dealer Name</string>
    <string name="dealersalemanualorder">Dealer Sale \n Manual Order</string>
    <string name="dealer_gitgood_reciept">Dealer GIT and Good\n Reciept Enty</string>
    <string name="pending_calls">Pending\n Calls</string>
    <string name="done">Done</string>
    <string name="totalamount">Total Amount</string>
    <string name="discount">Discount</string>
    <string name="netamount">Net Amount</string>
    <string name="areamanagervisitlog">Area Manager Visit Log</string>
    <string name="meetingnotes">Metting Notes</string>
    <string name="enddate">End Time</string>
    <string name="startdate">Call Start Time</string>
    <string name="time">Time</string>
    <string name="starttime">Start Time</string>
    <string name="datenotapplicable">This date is not applicable!</string>
    <string name="question">Question</string>
    <string name="cform">CForm</string>
    <string name="idcode">ID/Code</string>
    <string name="name">Name :</string>
    <string name="dispatchqnty">Dispatch Qty</string>
    <string name="recievedqty">Received Qty</string>
    <string name="damageqty">Damage Qty</string>
    <string name="discofdamagegood">Discription Of Damage Goods</string>
    <string name="shortqty">Short Qty</string>
    <string name="netqty">Net Qty</string>
    <string name="month">Month</string>
    <string name="fitment">Fitment</string>
    <string name="partno">Part No</string>
    <string name="segment">Segment</string>
    <string name="application">Application</string>
    <string name="address">Address</string>
    <string name="productdetailswithstock">Product Details With Stock </string>
    <string name="targetStock">Target Stock</string>
    <string name="currentstock">Current \n Stock </string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="solldqty">Sold Quantity</string>
    <string name="delaer_oneline_am_name">AM Name</string>
    <string name="dealer_oneline_dealer_code">Dealer Code</string>
    <string name="dealer_oneline_dealership_name">DealerShip Name</string>
    <string name="dealer_oneline_total_outstanding">Total Outstanding</string>
    <string name="delaer_oneline_Current">Current</string>
    <string name="dealer_oneline_OD_UPTO_30">OD UPTO 30</string>
    <string name="dealer_oneline_OD_less_60">OD >60</string>
    <string name="dealer_oneline_OD_less_30">OD >30</string>
</resources>