<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
   >
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:weightSum="9" >
         <TextView
            android:id="@+id/et_delaer_oneline_am_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delaer_oneline_am_name"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/et_deale_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dealer_oneline_dealer_code"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/et_deale_oneline_dealership_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dealer_oneline_dealership_name"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/city"
            android:textColor="@android:color/black"
            />

        <TextView
             android:id="@+id/et_dealer_oneline_total_outstanding"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dealer_oneline_total_outstanding"
            android:textColor="@android:color/black"
            />

        <TextView
             android:id="@+id/et_dealer_oneline_Current"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delaer_oneline_Current"
            android:textColor="@android:color/black"
            />

        <TextView
              android:id="@+id/et_dealer_oneline_OD_UPTO_30"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dealer_oneline_OD_UPTO_30"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/et_dealer_oneline_OD_less_30"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dealer_oneline_OD_less_30"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/et_dealer_oneline_OD_less_60"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dealer_oneline_OD_less_60"
            android:textColor="@android:color/black"
            />
    </LinearLayout>
</LinearLayout>
