<?xml version="1.0" encoding="utf-8"?>
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_row_selector"
                android:orientation="horizontal"
                android:weightSum="9" >

                <TextView
                    android:id="@+id/position1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:text="@string/idcode"
                    android:textColor="@color/custom_blue" />

                <TextView
                    android:id="@+id/position2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                     android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/custom_blue" />

                <TextView
                    android:id="@+id/position3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                     android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/dispatchqnty"
                    android:textColor="@color/custom_blue" />

                <TextView
                    android:id="@+id/position4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                     android:textSize="12sp"
                    android:gravity="center"
                    android:maxLines="3"
                    android:text="@string/recievedqty"
                    android:textColor="@color/custom_blue" />

                <TextView
                    android:id="@+id/position5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                     android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/damageqty"
                    android:textColor="@color/custom_blue" />

                <TextView
                    android:id="@+id/position6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                     android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/discofdamagegood"
                    android:textColor="@color/custom_blue" />
                <TextView
                    android:id="@+id/position7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                     android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/salereturn"
                    android:textColor="@color/custom_blue" />
                
                <TextView
                    android:id="@+id/position8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                     android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/shortqty"
                    android:textColor="@color/custom_blue" />
                
                <TextView
                    android:id="@+id/position9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                     android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/netqty"
                    android:textColor="@color/custom_blue" />
            </LinearLayout>